# openclaw-dashboard-exo

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
dashboard/: config.default.js  index.html
dashboard/core/: app.js  helpers.js  style.css  theme.js  tooltip.js
dashboard/panels/core/cron/: panel.js
dashboard/panels/core/events/: panel.js
dashboard/panels/core/exo-stats/: panel.js
dashboard/panels/core/heartbeat/: panel.js
dashboard/panels/core/metrics-rail/: panel.js
dashboard/panels/core/remembrall/: panel.js
dashboard/panels/core/rule-graph/: panel.js
server/: config.example.yaml  server.py
server/parsers/: cron_status.py  ext_events.py  rules.py  self_review.py
server/providers/: __init__.py  remembrall.py
